@@ -22,13 +22,13 @@ public class AsyncBookSummaryService {
     private final EntitySummaryService entitySummaryService;
     private final ModelService modelService;
     private final BookService bookService;
-    private final ModelConfigurationRepository modelConfigurationRepository;
+    private final AsyncBookProcessor asyncBookProcessor;
 
     public String generateResponse(
             String promptText,
             Long modelConfigurationId
     ) {
-        Long batchId = Long.valueOf(System.nanoTime());
+        Long batchId = System.nanoTime();
 
         String systemPrompt = """
             Here is the Title, Author Name and Publishing Year of a book. Please search the web
@@ -43,15 +43,17 @@ public class AsyncBookSummaryService {
         List<RankedBook> books = bookService.findAll();
         log.debug("Processing through {} books batchId {}", books.size(), batchId);
 
+
+
         List<CompletableFuture<Boolean>> futures = books.stream()
-                .map(book -> processBookAsync(
+                .map(book -> asyncBookProcessor.processBookAsync(
                         book,
                         systemPrompt,
                         modelConfiguration,
                         batchId
                     )
                 )
-                .collect(Collectors.toList());
+                .toList();
 
         long successCount = futures.stream()
                 .map(CompletableFuture::join)
@@ -62,50 +64,5 @@ public class AsyncBookSummaryService {
         return String.format("Successfully processed %d of %d in batch %d",
             successCount, books.size(), batchId
         );
-    }
-
-    @Async
-    protected CompletableFuture<Boolean> processBookAsync(
-            RankedBook book,
-            String systemPrompt,
-            ModelConfiguration modelConfiguration,
-            Long batchId
-    ) {
-            String bookInfo = """
-                {
-                    "title": "%s",
-                    "authorName": "%s",
-                    "publishYear": "%s",
-                    "blurb": "%s"
-                }I
-                """.formatted(
-                book.getTitle(),
-                book.getAuthorName(),
-                book.getPublishYear(),
-                ""
-            );
-
-            log.trace("System prompt: {}", systemPrompt);
-            log.trace("BookInfo: {}", book);
-            log.trace("Model configuration: {}", modelConfiguration);
-            log.debug("Processing {} in batch {}",book.getAuthorName(), batchId);
-            String summary = aiService.generateResponse(
-                    systemPrompt,
-                    bookInfo,
-                    modelConfiguration
-            );
-            log.debug("Done {} in batch {} summary length {}", book.getAuthorName(), batchId, summary.length());
-            log.trace("Summary: {}", summary);
-
-            EntitySummary entitySummary = EntitySummary.builder()
-                    .modelConfiguration(modelConfiguration)
-                    .type("ranked_book")
-                    .entityId(book.getId())
-                    .summary(summary)
-                    .batchId(batchId)
-                    .build();
-
-            entitySummaryService.save(entitySummary);
-            return CompletableFuture.completedFuture(true);
     }
 }
